# eval-hub-sdk

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: pre-commit.yml  publish-pypi.yml  test.yml
examples/: client_usage.ipynb  client_usage.py  lighteval_demo_external.ipynb
examples/lighteval_adapter/: Dockerfile  config.yaml  lighteval_adapter.py  requirements.txt
examples/simple_adapter/: Dockerfile  README.md  k8s-example.yaml  requirements.txt  run_local.py  simple_adapter.py
src/evalhub/: __init__.py
src/evalhub/adapter/: __init__.py  callbacks.py  config.py  settings.py
src/evalhub/adapter/models/: __init__.py  adapter.py  framework.py  job.py
src/evalhub/adapter/oci/: __init__.py  adapter.py  persister.py
src/evalhub/adapter/server/: app.py
src/evalhub/client/: __init__.py  base.py  evalhub.py
src/evalhub/models/: __init__.py  api.py
src/evalhub/utils/: __init__.py
src/evalhub_sdk/: __init__.py  cli.py
src/evalhub_sdk/api/: endpoints.py  router.py
src/evalhub_sdk/client/: adapter_client.py  discovery.py
src/evalhub_sdk/models/: __init__.py  api.py  framework.py
src/evalhub_sdk/server/: __init__.py  app.py
tests/: __init__.py
tests/e2e/: test_persist_with_mock_persister.py  test_smoke_test_eval_hub_server.py
tests/integration/: __init__.py  test_adapter_integration.py
tests/unit/: __init__.py  test_adapter_models.py  test_client.py  test_framework_adapter.py  test_models_api.py  test_oci_persister.py  test_persist_endpoint.py  test_retry_logic.py  test_server.py
