[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evalhub-sdk"
version = "0.1.0"
description = "SDK for building framework adapters that integrate with TrustyAI EvalHub"
authors = [
    {name = "Rui Vieira", email = "rui@redhat.com"},
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["ai", "evaluation", "framework", "sdk", "trustyai"]

dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "importlib-metadata>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]

examples = [
    "lm-eval>=0.4.0",  # For LM-Eval example adapter
    "ragas>=0.1.0",    # For RAGAS example adapter
]

all = ["evalhub-sdk[dev,examples]"]

[project.urls]
Homepage = "https://trustyai.org"
Repository = "https://github.com/trustyai-explainability/trustyai-service"
Documentation = "https://trustyai.org/docs"
"Bug Tracker" = "https://github.com/trustyai-explainability/trustyai-service/issues"

[project.scripts]
evalhub-adapter = "evalhub_sdk.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["evalhub_sdk*"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Exclude auto-generated files
  \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by black)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
mypy_path = "src"
packages = ["evalhub_sdk"]

[[tool.mypy.overrides]]
module = [
    "lm_eval.*",
    "ragas.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=src/evalhub_sdk",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring external services",
    "adapter: Tests for specific framework adapters",
]
asyncio_mode = "auto"
