[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eval-hub-sdk"
version = "0.1.0a2"
description = "Python SDK for EvalHub: common models, REST API client, and framework adapter SDK"
authors = [
    {name = "Rui Vieira", email = "rui@redhat.com"},
]
readme = "README.md"
requires-python = ">=3.11"  # needed for LMEval compatibility
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["ai", "evaluation", "framework", "sdk", "trustyai"]

dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "importlib-metadata>=6.0.0",
]

[project.optional-dependencies]
# Core functionality - of main eval-hub-sdk service and basic operations
core = [
    "httpx>=0.25.0",
]

# Adapter development - for building custom evaluation framework adapters
adapter = [
    "eval-hub-sdk[core]",
]

# Client API - for end users in Jupyter notebooks and scripts
client = [
    "eval-hub-sdk[core]",
]

# Development dependencies
# NOTE: Versions should match .pre-commit-config.yaml and .github/workflows/pre-commit.yml
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff==0.1.6",  # Match ruff-pre-commit v0.1.6
    "mypy==1.7.1",  # Match mirrors-mypy v1.7.1
    "pre-commit>=3.4.0",
]

# Example framework integrations
examples = [
    "lm-eval>=0.4.0",  # For LM-Eval example adapter
    "ragas>=0.1.0",    # For RAGAS example adapter
]

# All core functionality (excludes examples which are optional)
all = ["eval-hub-sdk[core,adapter,client,dev]"]

[project.urls]
Homepage = "https://github.com/eval-hub"
Repository = "https://github.com/eval-hub/eval-hub-sdk"
Documentation = "https://github.com/eval-hub/eval-hub-sdk"
"Bug Tracker" = "https://github.com/eval-hub/eval-hub-sdk/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["evalhub*"]

[tool.ruff]
target-version = "py312"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
mypy_path = "src"
packages = ["evalhub"]

[[tool.mypy.overrides]]
module = [
    "lm_eval.*",
    "ragas.*",
    "pytest.*",
    "pytest",
    "yaml.*",
    "yaml",
    "httpx.*",
    "pydantic_settings",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=src/evalhub",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring external services",
    "adapter: Tests for specific framework adapters",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "fastapi>=0.124.4",
    "httpx>=0.28.1",
    "mypy>=1.7.1",
    "oras>=0.2.38",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "types-pyyaml>=6.0.12.20250915",
    "uvicorn>=0.38.0",
]
